<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dash_board_background"
    tools:context=".fragments.DashboardFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearDash"
        android:layout_margin="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:civ_border_color="@color/maroon"
            android:layout_marginStart="10dp"
            app:civ_border_width="2dp"
            android:src="@mipmap/salama"
            android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txtSalamaDash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/salama_dash"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearDash"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:layout_margin="20dp"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="5dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottielive"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/livestream"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_stream"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="25sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieReport"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/report"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="1"
        android:layout_column="0"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottiePremise"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/home"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premise"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_row="1"
        android:layout_column="1"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieSecurity"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/cop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_firm"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="0"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_exit"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Exit"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="25sp"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieTalk"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/talk"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/talk_to_us"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </GridLayout>







</RelativeLayout>